--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
     <div id="carouselBanner" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
+                <a><text-align:center><b style="font-size: 26px;">UPCOMING EXHIBITIONS</b></text-align:> </a>
+                <li></li>
                 <video class="d-block w-100" autoplay loop muted>
                     <source src="For Honor 2022.01.08 - 11.53.16.01.mp4" type="video/mp4">
                     
@@ -64,6 +66,9 @@
     </div>
 
     <!-- Featured Art Pieces -->
+    <li></li>
+    <a><text-align:center><b style="font-size: 26px;">MOST POPULAR ARTWORK</b></text-align:> </a>
+    <li></li>
     <div class="container featured-art mt-5">
         <div class="row">
             <div class="column">
