Added the foundation of the homepage
- added style.css file
- header
- carouselDisplay
- container2 below carousel
- container3 with rows to display artworks

--- a/sample-html-justin/index.html
+++ b/sample-html-justin/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>HomePage</title>
 </head>
 <body>
-    
+    <div class="header">
+        <div class="HeaderTop"></div>
+        <ul>
+            <li><a href="#">header one</a></li>
+            <li><a href="#">header two</a></li>
+            <li><a href="#">header three</a></li>
+        </ul>
+    </div>
+
+    <div class="carouselDisplay">
+        <div class="title">Display Carousel</div>
+    </div>
+
+    <div class="container2">
+        <div class="titlecontainer2">Discover the Finest Art</div>
+        <span>texts from website</span>
+    </div>
+
+    <div class="container3">
+        <div class="titlecontainer3">Featured Artworks</div>
+        <div class="row">
+            <div class="rowBoxes">
+                <div class="Artwork"></div>
+                <span>Artwork 1</span>
+            </div>
+            <div class="rowBoxes">
+                <div class="Artwork"></div>
+                <span>Artwork 1</span>
+            </div>
+            <div class="rowBoxes">
+                <div class="Artwork"></div>
+                <span>Artwork 1</span>
+            </div>
+            <div class="rowBoxes">
+                <div class="Artwork"></div>
+                <span>Artwork 1</span>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
