Added styles for header
- clickable functions for the header top

--- a/sample-html-justin/index.html
+++ b/sample-html-justin/index.html
@@ -7,13 +7,18 @@
     <title>HomePage</title>
 </head>
 <body>
+    
     <div class="header">
-        <div class="HeaderTop"></div>
+        <div class="headerTop">
+        <div class="headerTitle">VArtGallery</div>
         <ul>
-            <li><a href="#">header one</a></li>
-            <li><a href="#">header two</a></li>
-            <li><a href="#">header three</a></li>
+            <li><a class="navLink" href="#">header one</a></li>
+            <li><a class="navLink" href="#">header two</a></li>
+            <li><a class="navLink" href="#">header three</a></li>
+            <button class="call-action-button">Cart</button>
+            <button class="call-action-button">Sign in</button>
         </ul>
+        </div>
     </div>
 
     <div class="carouselDisplay">
