VArtgallery to homepage
Allow user to go back to homepage from "VArtGallery'

--- a/sample-html-justin/index.html
+++ b/sample-html-justin/index.html
@@ -14,34 +14,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-<<<<<<< Updated upstream
-    <div class="header">
-        <div class="HeaderTop"></div>
-        <ul>
-            <li><a href="#">header one</a></li>
-            <li><a href="#">header two</a></li>
-            <li><a href="#">header three</a></li>
-        </ul>
-    </div>
-
-    <div class="carouselDisplay">
-        <div class="title">Display Carousel</div>
-    </div>
-
-    <div class="container2">
-        <div class="titlecontainer2">Discover the Finest Art</div>
-        <span>texts from website</span>
-    </div>
-
-    <div class="container3">
-        <div class="titlecontainer3">Featured Artworks</div>
-        <div class="row">
-            <div class="rowBoxes">
-                <div class="Artwork"></div>
-                <span>Artwork 1</span>
-=======
     <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom">
-        <h5 class="my-0 me-auto">VArtGallery</h5>
+        <a href="./index.html" class="btn btn-light" role="button">
+            <h5>VArtGallery</h5></a>
+        <a class="my-0 me-auto"></a>
         <nav class="navbar navbar-expand-md navbar-light bg-white">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headNav">
                 <span class="navbar-toggler-icon"></span>
@@ -50,7 +26,7 @@
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="#">Exhibition</a></li>
-                    <li class="nav-item"><a class="nav-link vag-a-tan" href="#">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./About.html">About Us</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="btn vag-btn-tan me-2" href="#"><i class="bi bi-cart"></i> Cart</a></li>
@@ -110,7 +86,6 @@
                         <p class="mb-4">Whether you are looking to add to your personal collection or seeking the perfect statement piece, VArtGallery offers a seamless and enriching experience, ensuring that every acquisition is a treasured addition.</p>
                     </div>
                 </div>
->>>>>>> Stashed changes
             </div>
         </section>
     
