--- a/sample-html-justin/gallery.html
+++ b/sample-html-justin/gallery.html
@@ -15,7 +15,9 @@
 </head>
 <body>
     <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom">
-        <h5 class="my-0 me-auto">VArtGallery</h5>
+        <a href="./index.html" class="btn btn-light" role="button">
+            <h5>VArtGallery</h5></a>
+            <a class="my-0 me-auto"></a>
         <nav class="navbar navbar-expand-md navbar-light bg-white">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headNav">
                 <span class="navbar-toggler-icon"></span>
@@ -23,8 +25,8 @@
             <div class="collapse navbar-collapse" id="headNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link vag-a-tan" href="#">Exhibition</a></li>
-                    <li class="nav-item"><a class="nav-link vag-a-tan" href="#">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./index.html">Exhibition</a></li>
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./About.html">About Us</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="btn vag-btn-tan me-2" href="#"><i class="bi bi-cart"></i> Cart</a></li>
