--- a/sample-html-justin/About.html
+++ b/sample-html-justin/About.html
@@ -1,11 +1,110 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Virtual Art Gallery</title>
+    <link rel="icon" href="./static/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./static/styles.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
+    <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom">
+        <a href="./index.html" class="btn btn-light" role="button">
+            <h5>VArtGallery</h5></a>
+        <a class="my-0 me-auto"></a>
+        <nav class="navbar navbar-expand-md navbar-light bg-white">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="headNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./gallery.html">Gallery</a></li>
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="#">Exhibition</a></li>
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./About.html">About Us</a></li>
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="btn vag-btn-tan me-2" href="#"><i class="bi bi-cart"></i> Cart</a></li>
+                    <li class="nav-item"><a class="btn vag-btn-tan" href="./signup.html"><i class="bi bi-person-circle"></i> Sign in</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="vag-section vag-section-tan">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-md-10 text-center">
+                        <h2 class="mb-5">Discover the Finest Art</h2>
+                        <p class="mb-4">At VArtGallery, we celebrate the fusion of timeless elegance and contemporary flair. Our curated collection features masterpieces from renowned artists and emerging talents, providing art enthusiasts with an exquisite selection of paintings, sculptures, and digital art.</p>
+                        <p class="mb-4">Our mission is to connect discerning collectors with exceptional works of art that inspire and captivate. Each piece in our gallery is chosen for its quality, uniqueness, and ability to elevate any space.</p>
+                        <p class="mb-4">Whether you are looking to add to your personal collection or seeking the perfect statement piece, VArtGallery offers a seamless and enriching experience, ensuring that every acquisition is a treasured addition.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     
+        <section class="vag-section vag-section-whitesmoke">
+            <div class="container">
+                <h2 class="mb-5">Upcoming Exhibitions</h2>
+                <div class="row justify-content-center">
+                    <div class="col-md">
+                        <div class="mb-4">
+                            <h5>Exhibition 1: Modern Masters</h5>
+                            <p>Join us for an exclusive showcase of works by the most influential modern artists of the 20th and 21st centuries. This exhibition highlights the groundbreaking contributions of artists who have redefined the boundaries of contemporary art.</p>
+                        </div>
+                        <div class="mb-4">
+                            <h5>Exhibition 2: Art Beyond Borders</h5>
+                            <p>Experience the diversity of global artistry in this unique exhibition that brings together works from emerging and established artists across the world. 'Art Beyond Borders' celebrates the rich cultural heritage and innovative expressions that transcend geographical boundaries.</p>
+                        </div>
+                        <div class="text-center">
+                            <a href="exhibitions.html" class="btn vag-btn-tan">See All Exhibitions</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    
+    <footer class="text-center vag-footer">
+        <div class="container">
+            <div class="row mb-3">
+                <div class="col-md-4 mb-4 mb-md-0">
+                    <h5>Contact Us</h5>
+                    <p>
+                        8 Wilkie Rd, #02-01 Wilkie Edge, Singapore 228095<br />
+                        Email: info@vartgallery.com<br />
+                        Phone: (65) 6733 1877<br />
+                    </p>
+                </div>
+                <div class="col-md-4 mb-4 mb-md-0">
+                    <h5>Follow Us</h5>
+                    <a href="#"><i class="bi bi-facebook"></i></a>
+                    <a href="#"><i class="bi bi-twitter"></i></a>
+                    <a href="#"><i class="bi bi-instagram"></i></a>
+                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                </div>
+                <div class="col-md-4">
+                    <h5>Newsletter</h5>
+                    <p>Subscribe to our newsletter to stay updated on our latest exhibitions and events.</p>
+                    <form>
+                        <input type="email" class="form-control mb-2" placeholder="Enter your email">
+                        <button type="submit" class="btn vag-btn-tan">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+            <div class="row mt-4">
+                <div class="col-12">
+                    <p class="mb-0">&copy; 2024 VArtGallery. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
