--- a/sample-html-justin/index.html
+++ b/sample-html-justin/index.html
@@ -100,6 +100,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Artwork 1</h5>
                                     <p class="card-text">Artist Name</p>
+                                    <a href="./ArtistDetails.html" class="btn btn-primary stretched-link">Go somewhere</a>
                                 </div>
                             </div>
                         </div>
