Update on ArttistDetails
Add display for artist artwork and a personal section for artist to display their posts

--- a/sample-html-justin/ArtistDetails.html
+++ b/sample-html-justin/ArtistDetails.html
@@ -38,16 +38,16 @@
 
     <main>
         <section class="vag-section vag-section-tan"
-        style="background-image: url(./static/artwork/bobross01.jpg);">
-            <div class="container"
-            class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white">
+        style="background-image: url(https://mdbcdn.b-cdn.net/img/new/fluid/nature/015.webp);">
+            <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-10 text-center">
-                        <h1 class="mb-3">Bob Ross</h1>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Repellendus praesentium
-                            labore accusamus sequi, voluptate debitis tenetur in deleniti possimus modi voluptatum
-                            neque maiores dolorem unde? Aut dolorum quod excepturi fugit.
+                        <h1 class="text-white mb-3">Jane Doe</h1>
+                        <p class="text-white mb-0">
+                            Local artist Jane Doe is making waves with her vibrant and emotive pieces, blending traditional 
+                            techniques with modern themes. Her bold use of color and intricate patterns captures the 
+                            complexities of human emotion. With each new exhibit, Jane's reputation as a rising star 
+                            in the art scene continues to grow.
                           </p>
                     </div>
                 </div>
@@ -61,56 +61,49 @@
                     <div class="row">
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 1">
+                                <img src="https://picsum.photos/id/230/200/300" class="card-img-top" alt="Artwork 1">
                                 <div class="card-body">
-                                    <h5 class="card-title">Artwork 1</h5>
-                                    <p class="card-text">Artist Name</p>
-                                    <a href="./ArtistDetails.html" class="btn btn-primary stretched-link">Go to artist page</a>
+                                    <h5 class="card-title">By the Lake</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 2">
+                                <img src="https://picsum.photos/id/231/200/300" class="card-img-top" alt="Artwork 2">
                                 <div class="card-body">
-                                    <h5 class="card-title">Artwork 2</h5>
-                                    <p class="card-text">Artist Name</p>
+                                    <h5 class="card-title">Mountains</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 3">
+                                <img src="https://picsum.photos/id/232/200/300" class="card-img-top" alt="Artwork 3">
                                 <div class="card-body">
-                                    <h5 class="card-title">Artwork 3</h5>
-                                    <p class="card-text">Artist Name</p>
+                                    <h5 class="card-title">Night Lamp</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 4">
+                                <img src="https://picsum.photos/id/233/200/300" class="card-img-top" alt="Artwork 4">
                                 <div class="card-body">
-                                    <h5 class="card-title">Artwork 4</h5>
-                                    <p class="card-text">Artist Name</p>
+                                    <h5 class="card-title">Train Rails</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 5">
+                                <img src="https://picsum.photos/id/234/200/300" class="card-img-top" alt="Artwork 5">
                                 <div class="card-body">
-                                    <h5 class="card-title">Artwork 5</h5>
-                                    <p class="card-text">Artist Name</p>
+                                    <h5 class="card-title">Tower</h5>
                                 </div>
                             </div>
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 6">
+                                <img src="https://picsum.photos/id/235/200/300" class="card-img-top" alt="Artwork 6">
                                 <div class="card-body">
-                                    <h5 class="card-title">Artwork 6</h5>
-                                    <p class="card-text">Artist Name</p>
+                                    <h5 class="card-title">Glacier</h5>
                                 </div>
                             </div>
                         </div>
@@ -121,19 +114,19 @@
     
         <section class="vag-section vag-section-whitesmoke">
             <div class="container">
-                <h2 class="mb-5">Upcoming Exhibitions</h2>
+                <h2 class="mb-5">Jane Doe Posts</h2>
                 <div class="row justify-content-center">
                     <div class="col-md">
                         <div class="mb-4">
-                            <h5>Exhibition 1: Modern Masters</h5>
-                            <p>Join us for an exclusive showcase of works by the most influential modern artists of the 20th and 21st centuries. This exhibition highlights the groundbreaking contributions of artists who have redefined the boundaries of contemporary art.</p>
+                            <h5>Modern Masters</h5>
+                            <p>Join us for the unveiling of Jane Doe's latest collection, "Modern Masters," at our upcoming exhibition. Experience a captivating journey through bold colors and intricate patterns, exploring the depths of human emotion. Don't miss this opportunity to witness Jane's unique vision and artistic evolution. Visit our website for more details and to RSVP!</p>
                         </div>
                         <div class="mb-4">
-                            <h5>Exhibition 2: Art Beyond Borders</h5>
-                            <p>Experience the diversity of global artistry in this unique exhibition that brings together works from emerging and established artists across the world. 'Art Beyond Borders' celebrates the rich cultural heritage and innovative expressions that transcend geographical boundaries.</p>
+                            <h5>Whispers of Time</h5>
+                            <p>EThis stunning artwork blends rich textures and vibrant hues to capture the fleeting nature of memories and moments. Experience the intricate details and emotional depth that define Jane's unique style. Explore "Whispers of Time" on our website and add a piece of timeless beauty to your collection today!</p>
                         </div>
                         <div class="text-center">
-                            <a href="exhibitions.html" class="btn vag-btn-tan">See All Exhibitions</a>
+                            <a href="#" class="btn vag-btn-tan">See All Posts</a>
                         </div>
                     </div>
                 </div>
