--- a/sample-html-justin/index.html
+++ b/sample-html-justin/index.html
@@ -96,11 +96,10 @@
                     <div class="row">
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 1">
+                                <img src="https://picsum.photos/id/230/200/300" class="card-img-top" alt="Artwork 1">
                                 <div class="card-body">
-                                    <h5 class="card-title">Artwork 1</h5>
-                                    <p class="card-text">Artist Name</p>
-                                    <a href="./ArtistDetails.html" class="btn btn-primary stretched-link">Go somewhere</a>
+                                    <h5 class="card-title">By the Lake</h5>
+                                    <a class="card-text" href="./ArtistDetails.html">Bob Ross</a>
                                 </div>
                             </div>
                         </div>
