Add content for About
About us page, added description of the website

--- a/sample-html-justin/About.html
+++ b/sample-html-justin/About.html
@@ -41,9 +41,9 @@
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-10 text-center">
-                        <h2 class="mb-5">Discover the Finest Art</h2>
-                        <p class="mb-4">At VArtGallery, we celebrate the fusion of timeless elegance and contemporary flair. Our curated collection features masterpieces from renowned artists and emerging talents, providing art enthusiasts with an exquisite selection of paintings, sculptures, and digital art.</p>
-                        <p class="mb-4">Our mission is to connect discerning collectors with exceptional works of art that inspire and captivate. Each piece in our gallery is chosen for its quality, uniqueness, and ability to elevate any space.</p>
+                        <h2 class="mb-5">About Us</h2>
+                        <p class="mb-4">Welcome to VArtGallery, your premier destination for discovering and celebrating local artists. Our mission is to shine a spotlight on the incredible talent within our community, bringing you the latest in contemporary art from emerging and established artists alike.</p>
+                        <p class="mb-4">At VArtGallery, we believe in the power of art to inspire, provoke thought, and bring people together. Our platform showcases a diverse range of artistic expressions, from bold and innovative pieces to timeless and classic works. We are dedicated to providing a space where local artists can share their vision, connect with art enthusiasts, and gain the recognition they deserve.</p>
                         <p class="mb-4">Whether you are looking to add to your personal collection or seeking the perfect statement piece, VArtGallery offers a seamless and enriching experience, ensuring that every acquisition is a treasured addition.</p>
                     </div>
                 </div>
@@ -52,19 +52,25 @@
     
         <section class="vag-section vag-section-whitesmoke">
             <div class="container">
-                <h2 class="mb-5">Upcoming Exhibitions</h2>
+                <h2 class="mb-5">What We Offer!</h2>
                 <div class="row justify-content-center">
                     <div class="col-md">
                         <div class="mb-4">
-                            <h5>Exhibition 1: Modern Masters</h5>
-                            <p>Join us for an exclusive showcase of works by the most influential modern artists of the 20th and 21st centuries. This exhibition highlights the groundbreaking contributions of artists who have redefined the boundaries of contemporary art.</p>
+                            <p>Latest Artworks: Stay up-to-date with the newest creations from your favorite local artists. Each piece is carefully curated to highlight the unique styles and stories that make our community's art scene so vibrant.</p>
                         </div>
                         <div class="mb-4">
-                            <h5>Exhibition 2: Art Beyond Borders</h5>
-                            <p>Experience the diversity of global artistry in this unique exhibition that brings together works from emerging and established artists across the world. 'Art Beyond Borders' celebrates the rich cultural heritage and innovative expressions that transcend geographical boundaries.</p>
+                            <p>Exhibitions: Don't miss out on upcoming exhibitions featuring our talented artists. We provide detailed information on dates, venues, and featured works, ensuring you have all the information you need to experience these events firsthand.</p>
                         </div>
-                        <div class="text-center">
-                            <a href="exhibitions.html" class="btn vag-btn-tan">See All Exhibitions</a>
+                        <div class="mb-4">
+                            <p>Artist Spotlights: Get to know the artists behind the masterpieces. Our in-depth profiles and interviews offer a glimpse into their creative processes, inspirations, and future projects.</p>
+                        </div>
+                        <div class="mb-4">
+                            <p>Community Engagement: Join our growing community of art lovers. Participate in discussions, attend events, and support local talent through our interactive platform.</p>
+                        </div>
+                <h2 class="mb-5">Join Us!</h2>
+                        <div class="mb-4">
+                            <p>Explore our website to discover the latest in local art, learn about upcoming exhibitions, and support the artists who make our community vibrant and unique. Whether you are an avid collector, a casual enthusiast, or an artist yourself, VArtGallery is your gateway to the best of local art.</p>
+                            <p>Thank you for being a part of our journey in celebrating and promoting the incredible talent within our community. Together, let's make art accessible and appreciated by all.</p>
                         </div>
                     </div>
                 </div>
