--- a/sample-html-justin/ArtistDetails.html
+++ b/sample-html-justin/ArtistDetails.html
@@ -123,7 +123,7 @@
                         </div>
                         <div class="mb-4">
                             <h5>Whispers of Time</h5>
-                            <p>EThis stunning artwork blends rich textures and vibrant hues to capture the fleeting nature of memories and moments. Experience the intricate details and emotional depth that define Jane's unique style. Explore "Whispers of Time" on our website and add a piece of timeless beauty to your collection today!</p>
+                            <p>This stunning artwork blends rich textures and vibrant hues to capture the fleeting nature of memories and moments. Experience the intricate details and emotional depth that define Jane's unique style. Explore "Whispers of Time" on our website and add a piece of timeless beauty to your collection today!</p>
                         </div>
                         <div class="text-center">
                             <a href="#" class="btn vag-btn-tan">See All Posts</a>
