--- a/sample-html-justin/index.html
+++ b/sample-html-justin/index.html
@@ -45,21 +45,24 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./static/carousel-tan.jpg" class="d-block w-100" alt="First slide">
+                    <img src="https://picsum.photos/id/261/1920/300" 
+                    class="img-fluid" class="d-block w-100" alt="First slide"
+                    >
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First Slide Title</h5>
-                        <p>First Slide Description</p>
+                        <h5>Modern Masters Exhibition</h5>
+                        <p>Come join us on Jane's first exhibition displaying her bold colors and intricate patterns, exploring the depths on human emotions!</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./static/carousel-magenta.jpg" class="d-block w-100" alt="Second slide">
+                    <img src="https://picsum.photos/id/280/1920/300"
+                     class="d-block w-100" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Second Slide Title</h5>
                         <p>Second Slide Description</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="./static/carousel-mint.jpg" class="d-block w-100" alt="Third slide">
+                    <img src="https://picsum.photos/id/267/1920/300" class="d-block w-100" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third Slide Title</h5>
                         <p>Third Slide Description</p>
@@ -99,7 +102,7 @@
                                 <img src="https://picsum.photos/id/230/200/300" class="card-img-top" alt="Artwork 1">
                                 <div class="card-body">
                                     <h5 class="card-title">By the Lake</h5>
-                                    <a class="card-text" href="./ArtistDetails.html">Bob Ross</a>
+                                    <a class="card-text" href="./ArtistDetails.html">Jane Doe</a>
                                 </div>
                             </div>
                         </div>
