--- a/sample-html-justin/gallery.html
+++ b/sample-html-justin/gallery.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="headNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./index.html">Exhibition</a></li>
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./ExhibNews.html">Exhibition</a></li>
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./About.html">About Us</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
