--- a/sample-html-justin/About.html
+++ b/sample-html-justin/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Virtual Art Gallery</title>
+    <title>About Us</title>
     <link rel="icon" href="./static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="headNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link vag-a-tan" href="#">Exhibition</a></li>
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./ExhibNews.html">Exhibition</a></li>
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./About.html">About Us</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
@@ -50,7 +50,7 @@
             </div>
         </section>
     
-        <section class="vag-section vag-section-whitesmoke">
+        <section class="vag-section">
             <div class="container">
                 <h2 class="mb-5">What We Offer!</h2>
                 <div class="row justify-content-center">
@@ -67,13 +67,17 @@
                         <div class="mb-4">
                             <p>Community Engagement: Join our growing community of art lovers. Participate in discussions, attend events, and support local talent through our interactive platform.</p>
                         </div>
-                <h2 class="mb-5">Join Us!</h2>
-                        <div class="mb-4">
-                            <p>Explore our website to discover the latest in local art, learn about upcoming exhibitions, and support the artists who make our community vibrant and unique. Whether you are an avid collector, a casual enthusiast, or an artist yourself, VArtGallery is your gateway to the best of local art.</p>
-                            <p>Thank you for being a part of our journey in celebrating and promoting the incredible talent within our community. Together, let's make art accessible and appreciated by all.</p>
-                        </div>
                     </div>
-                </div>
+            </div>
+        </section>
+
+        <section class="vag-section vag-section-whitesmoke">
+            <div class="container">
+                <h2 class="mb-5">Join Us!</h2>
+                    <div class="mb-4">
+                        <p>Explore our website to discover the latest in local art, learn about upcoming exhibitions, and support the artists who make our community vibrant and unique. Whether you are an avid collector, a casual enthusiast, or an artist yourself, VArtGallery is your gateway to the best of local art.</p>
+                        <p>Thank you for being a part of our journey in celebrating and promoting the incredible talent within our community. Together, let's make art accessible and appreciated by all.</p>
+                    </div>
             </div>
         </section>
     </main>
