--- a/sample-html-justin/ArtistDetails.html
+++ b/sample-html-justin/ArtistDetails.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Virtual Art Gallery</title>
+    <title>Artist Details</title>
     <link rel="icon" href="./static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="headNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link vag-a-tan" href="#">Exhibition</a></li>
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./ExhibNews.html">Exhibition</a></li>
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./About.html">About Us</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
