--- a/sample-html-justin/index.html
+++ b/sample-html-justin/index.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="headNav">
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./gallery.html">Gallery</a></li>
-                    <li class="nav-item"><a class="nav-link vag-a-tan" href="#">Exhibition</a></li>
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./ExhibNews.html">Exhibition</a></li>
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./About.html">About Us</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
@@ -57,14 +57,14 @@
                     <img src="https://picsum.photos/id/280/1920/300"
                      class="d-block w-100" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second Slide Title</h5>
+                        <h5>Featured Artwork</h5>
                         <p>Second Slide Description</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="https://picsum.photos/id/267/1920/300" class="d-block w-100" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third Slide Title</h5>
+                        <h5>Featured Artist</h5>
                         <p>Third Slide Description</p>
                     </div>
                 </div>
@@ -99,9 +99,9 @@
                     <div class="row">
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="https://picsum.photos/id/230/200/300" class="card-img-top" alt="Artwork 1">
+                                <img src="https://picsum.photos/id/111/200/200" class="card-img-top" alt="Artwork 1">
                                 <div class="card-body">
-                                    <h5 class="card-title">By the Lake</h5>
+                                    <h5 class="card-title">Vintage Car</h5>
                                     <a class="card-text" href="./ArtistDetails.html">Jane Doe</a>
                                 </div>
                             </div>
