add artworkdetial page
- comment section for artworkdetails page
- onclick images on landing page to go to artwork details

--- a/sample-html-justin/ArtistDetails.html
+++ b/sample-html-justin/ArtistDetails.html
@@ -61,7 +61,9 @@
                     <div class="row">
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="https://picsum.photos/id/230/200/300" class="card-img-top" alt="Artwork 1">
+                                <a href="./dashboard.html">
+                                <img src="https://picsum.photos/id/230/200/200" class="card-img-top" alt="Artwork 1">
+                                </a>
                                 <div class="card-body">
                                     <h5 class="card-title">By the Lake</h5>
                                 </div>
@@ -69,7 +71,7 @@
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="https://picsum.photos/id/231/200/300" class="card-img-top" alt="Artwork 2">
+                                <img src="https://picsum.photos/id/231/200/200" class="card-img-top" alt="Artwork 2">
                                 <div class="card-body">
                                     <h5 class="card-title">Mountains</h5>
                                 </div>
@@ -77,7 +79,7 @@
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="https://picsum.photos/id/232/200/300" class="card-img-top" alt="Artwork 3">
+                                <img src="https://picsum.photos/id/232/200/200" class="card-img-top" alt="Artwork 3">
                                 <div class="card-body">
                                     <h5 class="card-title">Night Lamp</h5>
                                 </div>
@@ -85,7 +87,7 @@
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="https://picsum.photos/id/233/200/300" class="card-img-top" alt="Artwork 4">
+                                <img src="https://picsum.photos/id/233/200/200" class="card-img-top" alt="Artwork 4">
                                 <div class="card-body">
                                     <h5 class="card-title">Train Rails</h5>
                                 </div>
@@ -93,7 +95,7 @@
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="https://picsum.photos/id/234/200/300" class="card-img-top" alt="Artwork 5">
+                                <img src="https://picsum.photos/id/234/200/200" class="card-img-top" alt="Artwork 5">
                                 <div class="card-body">
                                     <h5 class="card-title">Tower</h5>
                                 </div>
@@ -101,7 +103,7 @@
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="https://picsum.photos/id/235/200/300" class="card-img-top" alt="Artwork 6">
+                                <img src="https://picsum.photos/id/235/200/200" class="card-img-top" alt="Artwork 6">
                                 <div class="card-body">
                                     <h5 class="card-title">Glacier</h5>
                                 </div>
