--- a/sample-html-justin/ExhibNews.html
+++ b/sample-html-justin/ExhibNews.html
@@ -37,9 +37,9 @@
     </header>
 
     <main>
-        <section class="vag-section vag-section-tan">
-            <div class="col-md-15 text-center" >
-                <h2 class="mb-2">Upcoming Exhibitions</h2>
+        <section class="vag-section-tan">
+            <div class="col-md-0 text-center" >
+                <h2 class="mb-3">Upcoming Exhibitions</h2>
                 <div id="carouselIndicators" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselIndicators" data-bs-slide-to="0" class="active"></button>
@@ -160,9 +160,6 @@
                         <div class="mb-4">
                             <h5>Exhibition 2: Art Beyond Borders</h5>
                             <p>Experience the diversity of global artistry in this unique exhibition that brings together works from emerging and established artists across the world. 'Art Beyond Borders' celebrates the rich cultural heritage and innovative expressions that transcend geographical boundaries.</p>
-                        </div>
-                        <div class="text-center">
-                            <a href="exhibitions.html" class="btn vag-btn-tan">See All Exhibitions</a>
                         </div>
                     </div>
                 </div>
