--- a/sample-html-justin/index.html
+++ b/sample-html-justin/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Virtual Art Gallery</title>
+    <title>Artwork Detail</title>
     <link rel="icon" href="./static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -54,18 +54,18 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="https://picsum.photos/id/280/1920/300"
+                    <img src="https://picsum.photos/id/111/1920/300"
                      class="d-block w-100" alt="Second slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Featured Artwork</h5>
-                        <p>Second Slide Description</p>
+                        <p>Vintage Car</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="https://picsum.photos/id/267/1920/300" class="d-block w-100" alt="Third slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Featured Artist</h5>
-                        <p>Third Slide Description</p>
+                        <p>Jane Doe</p>
                     </div>
                 </div>
             </div>
@@ -99,8 +99,10 @@
                     <div class="row">
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
+                                <a href="ArtworkDetail/VintageCar.html">
                                 <img src="https://picsum.photos/id/111/200/200" class="card-img-top" alt="Artwork 1">
                                 <div class="card-body">
+                                </a>
                                     <h5 class="card-title">Vintage Car</h5>
                                     <a class="card-text" href="./ArtistDetails.html">Jane Doe</a>
                                 </div>
@@ -108,7 +110,7 @@
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 2">
+                                <img src="https://picsum.photos/id/112/200/200" class="card-img-top" alt="Artwork 2">
                                 <div class="card-body">
                                     <h5 class="card-title">Artwork 2</h5>
                                     <p class="card-text">Artist Name</p>
@@ -117,7 +119,7 @@
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 3">
+                                <img src="https://picsum.photos/id/113/200/200" class="card-img-top" alt="Artwork 3">
                                 <div class="card-body">
                                     <h5 class="card-title">Artwork 3</h5>
                                     <p class="card-text">Artist Name</p>
@@ -126,7 +128,7 @@
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 4">
+                                <img src="https://picsum.photos/id/114/200/200" class="card-img-top" alt="Artwork 4">
                                 <div class="card-body">
                                     <h5 class="card-title">Artwork 4</h5>
                                     <p class="card-text">Artist Name</p>
@@ -135,7 +137,7 @@
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 5">
+                                <img src="https://picsum.photos/id/115/200/200" class="card-img-top" alt="Artwork 5">
                                 <div class="card-body">
                                     <h5 class="card-title">Artwork 5</h5>
                                     <p class="card-text">Artist Name</p>
@@ -144,7 +146,7 @@
                         </div>
                         <div class="col-6 col-md-3 mb-4">
                             <div class="card">
-                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 6">
+                                <img src="https://picsum.photos/id/116/200/200" class="card-img-top" alt="Artwork 6">
                                 <div class="card-body">
                                     <h5 class="card-title">Artwork 6</h5>
                                     <p class="card-text">Artist Name</p>
@@ -170,7 +172,7 @@
                             <p>Experience the diversity of global artistry in this unique exhibition that brings together works from emerging and established artists across the world. 'Art Beyond Borders' celebrates the rich cultural heritage and innovative expressions that transcend geographical boundaries.</p>
                         </div>
                         <div class="text-center">
-                            <a href="exhibitions.html" class="btn vag-btn-tan">See All Exhibitions</a>
+                            <a href="./ExhibNews.html" class="btn vag-btn-tan">See All Exhibitions</a>
                         </div>
                     </div>
                 </div>
