--- a/sample-html-justin/gallery.html
+++ b/sample-html-justin/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Artist Details</title>
+    <title>Virtual Art Gallery</title>
     <link rel="icon" href="./static/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
@@ -17,7 +17,7 @@
     <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 bg-white border-bottom">
         <a href="./index.html" class="btn btn-light" role="button">
             <h5>VArtGallery</h5></a>
-        <a class="my-0 me-auto"></a>
+            <a class="my-0 me-auto"></a>
         <nav class="navbar navbar-expand-md navbar-light bg-white">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#headNav">
                 <span class="navbar-toggler-icon"></span>
@@ -37,98 +37,83 @@
     </header>
 
     <main>
-        <section class="vag-section vag-section-tan"
-        style="background-image: url(https://mdbcdn.b-cdn.net/img/new/fluid/nature/015.webp);">
+        <section class="vag-section vag-section-tan">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-10 text-center">
-                        <h1 class="text-white mb-3">Jane Doe</h1>
-                        <p class="text-white mb-0">
-                            Local artist Jane Doe is making waves with her vibrant and emotive pieces, blending traditional 
-                            techniques with modern themes. Her bold use of color and intricate patterns captures the 
-                            complexities of human emotion. With each new exhibit, Jane's reputation as a rising star 
-                            in the art scene continues to grow.
-                          </p>
+                        <h2 class="mb-5">Explore Our Extensive Art Collection</h2>
+                        <p class="mb-4">Welcome to the VArtGallery's Gallery page. Here, you can browse through our extensive collection of artworks, ranging from classical paintings to modern digital art. Use the filters below to narrow down your search and find the perfect piece for your collection.</p>
+                        <p class="mb-4">Whether you are a seasoned collector or a first-time buyer, our gallery offers a diverse selection to suit all tastes and preferences. Explore, discover, and be inspired by the finest art from around the world.</p>
                     </div>
                 </div>
             </div>
         </section>
-    
+
         <section class="vag-section">
             <div class="container">
-                <h2 class="mb-5">Artist Works</h2>
-                <div class="row justify-content-center">
-                    <div class="row">
-                        <div class="col-6 col-md-3 mb-4">
-                            <div class="card">
-                                <a href="./dashboard.html">
-                                <img src="https://picsum.photos/id/230/200/200" class="card-img-top" alt="Artwork 1">
-                                </a>
-                                <div class="card-body">
-                                    <h5 class="card-title">By the Lake</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-3 mb-4">
-                            <div class="card">
-                                <img src="https://picsum.photos/id/231/200/200" class="card-img-top" alt="Artwork 2">
-                                <div class="card-body">
-                                    <h5 class="card-title">Mountains</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-3 mb-4">
-                            <div class="card">
-                                <img src="https://picsum.photos/id/232/200/200" class="card-img-top" alt="Artwork 3">
-                                <div class="card-body">
-                                    <h5 class="card-title">Night Lamp</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-3 mb-4">
-                            <div class="card">
-                                <img src="https://picsum.photos/id/233/200/200" class="card-img-top" alt="Artwork 4">
-                                <div class="card-body">
-                                    <h5 class="card-title">Train Rails</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-3 mb-4">
-                            <div class="card">
-                                <img src="https://picsum.photos/id/234/200/200" class="card-img-top" alt="Artwork 5">
-                                <div class="card-body">
-                                    <h5 class="card-title">Tower</h5>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-3 mb-4">
-                            <div class="card">
-                                <img src="https://picsum.photos/id/235/200/200" class="card-img-top" alt="Artwork 6">
-                                <div class="card-body">
-                                    <h5 class="card-title">Glacier</h5>
-                                </div>
-                            </div>
-                        </div>
+                <h2 class="mb-5">Artwork Gallery</h2>
+                <div class="row mb-4">
+                    <div class="col-md-4">
+                        <input type="text" id="artworkName" class="form-control" placeholder="Filter by Artwork Name">
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" id="artistName" class="form-control" placeholder="Filter by Artist Name">
+                    </div>
+                    <div class="col-md-4">
+                        <select id="artworkType" class="form-control">
+                            <option value="">Filter by Artwork Type</option>
+                            <option value="painting">Painting</option>
+                            <option value="sculpture">Sculpture</option>
+                            <option value="digital">Digital Art</option>
+                        </select>
                     </div>
                 </div>
-            </div>
-        </section>
-    
-        <section class="vag-section vag-section-whitesmoke">
-            <div class="container">
-                <h2 class="mb-5">Jane Doe Posts</h2>
-                <div class="row justify-content-center">
-                    <div class="col-md">
-                        <div class="mb-4">
-                            <h5>Modern Masters</h5>
-                            <p>Join us for the unveiling of Jane Doe's latest collection, "Modern Masters," at our upcoming exhibition. Experience a captivating journey through bold colors and intricate patterns, exploring the depths of human emotion. Don't miss this opportunity to witness Jane's unique vision and artistic evolution. Visit our website for more details and to RSVP!</p>
+                <div class="row justify-content-center" id="artworkGallery">
+                    <div class="row">
+                        <div class="col-6 col-md-3 mb-4 artwork-card" data-name="Artwork 1" data-artist="Artist Name" data-type="painting">
+                            <div class="card">
+                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">Artwork 1</h5>
+                                    <p class="card-text">Artist Name</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="mb-4">
-                            <h5>Whispers of Time</h5>
-                            <p>This stunning artwork blends rich textures and vibrant hues to capture the fleeting nature of memories and moments. Experience the intricate details and emotional depth that define Jane's unique style. Explore "Whispers of Time" on our website and add a piece of timeless beauty to your collection today!</p>
+                        <div class="col-6 col-md-3 mb-4 artwork-card" data-name="Artwork 2" data-artist="Artist Name" data-type="sculpture">
+                            <div class="card">
+                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 2">
+                                <div class="card-body">
+                                    <h5 class="card-title">Artwork 2</h5>
+                                    <p class="card-text">Artist Name</p>
+                                </div>
+                            </div>
                         </div>
-                        <div class="text-center">
-                            <a href="#" class="btn vag-btn-tan">See All Posts</a>
+                        <div class="col-6 col-md-3 mb-4 artwork-card" data-name="Artwork 3" data-artist="Artist Name" data-type="painting">
+                            <div class="card">
+                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 3">
+                                <div class="card-body">
+                                    <h5 class="card-title">Artwork 3</h5>
+                                    <p class="card-text">Artist Name</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-3 mb-4 artwork-card" data-name="Artwork 2" data-artist="Artist Name" data-type="digitalart">
+                            <div class="card">
+                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 4">
+                                <div class="card-body">
+                                    <h5 class="card-title">Artwork 4</h5>
+                                    <p class="card-text">Artist Name</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-md-3 mb-4 artwork-card" data-name="Artwork 5" data-artist="Artist Name" data-type="digitalart">
+                            <div class="card">
+                                <img src="./static/artwork/image-01.jpg" class="card-img-top" alt="Artwork 5">
+                                <div class="card-body">
+                                    <h5 class="card-title">Artwork 5</h5>
+                                    <p class="card-text">Artist Name</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -170,5 +155,33 @@
             </div>
         </div>
     </footer>
+
+    <script>
+        $(document).ready(function() {
+            $('#artworkName, #artistName, #artworkType').on('input change', function() {
+                filterArtworks();
+            });
+
+            function filterArtworks() {
+                const nameFilter = $('#artworkName').val().toLowerCase();
+                const artistFilter = $('#artistName').val().toLowerCase();
+                const typeFilter = $('#artworkType').val().toLowerCase();
+
+                $('.artwork-card').each(function() {
+                    const name = $(this).data('name').toLowerCase();
+                    const artist = $(this).data('artist').toLowerCase();
+                    const type = $(this).data('type').toLowerCase();
+
+                    if ((name.includes(nameFilter) || !nameFilter) &&
+                        (artist.includes(artistFilter) || !artistFilter) &&
+                        (type.includes(typeFilter) || !typeFilter)) {
+                        $(this).show();
+                    } else {
+                        $(this).hide();
+                    }
+                });
+            }
+        });
+    </script>
 </body>
 </html>
