Add uploading page
options for artist to add:
- title
- tags
- descriptions
- option to make it sellable or free to view
- upload

--- a/sample-html-justin/index.html
+++ b/sample-html-justin/index.html
@@ -27,6 +27,7 @@
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./gallery.html">Gallery</a></li>
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./ExhibNews.html">Exhibition</a></li>
                     <li class="nav-item"><a class="nav-link vag-a-tan" href="./About.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link vag-a-tan" href="./ArtUpload.html">Upload</a></li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="btn vag-btn-tan me-2" href="#"><i class="bi bi-cart"></i> Cart</a></li>
