--- a/sample-html-justin/ArtUpload.html
+++ b/sample-html-justin/ArtUpload.html
@@ -38,8 +38,8 @@
 
     <main class="vag-section vag-section-tan">
             <div class="container">
-                <div class="row justify-content-start">
-                    <div class="col-md-10">
+                <div class="row justify-content-center">
+                    <div class="col-md-5">
                         <form id="buyForm">
                             <div class="mb-3">
                                 <label for="name" class="form-label" required>Title *</label>
